--- a/home.manager/packages.config
+++ b/home.manager/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Angular.UI.Bootstrap" version="0.11.2" targetFramework="net45" />
   <package id="angularjs" version="1.2.14" targetFramework="net40" />
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.2.0" targetFramework="net45" />
   <package id="CodeContracts.Unofficial" version="1.0.0.2" targetFramework="net40" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
@@ -27,7 +28,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebHelpers" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.7" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.OAuth" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net40" />
@@ -43,5 +44,6 @@
   <package id="System.Spatial" version="5.2.0" targetFramework="net40" />
   <package id="Twitter.Bootstrap" version="2.3.2" targetFramework="net40" />
   <package id="WebActivator" version="1.5.1" targetFramework="net45" />
-  <package id="WebGrease" version="1.1.0" targetFramework="net40" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net45" />
+  <package id="WebMatrix.Data" version="2.0.30506.0" targetFramework="net45" />
 </packages>
